--- a/style.css
+++ b/style.css
@@ -1,53 +1,57 @@
-body{
-    background-color: #f9f7fe;
-    font-family: sans-serif;
+body {
+  background-color: #84bfd3;
+  font-family: sans-serif;
 }
-.container{
-    max-width: 600px;
-    margin: 30px auto;
-    background-color: white;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;;
-    border-radius: 10px;
-    padding: 45px;
+.container {
+  max-width: 600px;
+  margin: 30px auto;
+  background-color: #f1ebeb;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 10px;
+  padding: 45px;
 }
 h1 {
-    text-align: center;
+  text-align: center;
 }
-select{
-    display: block;
-    width: 100%;
-    font-size: 18px;
-    padding: 10px;
-    border-radius: 5px;
+select {
+background-color: #f1efc5;
+  display: block;
+  width: 100%;
+  font-size: 18px;
+  padding: 10px;
+  border-radius: 5px;
 }
-h2{
-    font-size: 28px;
-    margin: 0 0 10px;
+h2 {
+  font-size: 28px;
+  margin: 0 0 10px;
 }
-.city{
-    margin: 20px 0;
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 0;
-    border-bottom: 1px dashed rgba(0, 0, 0, 0.4);
+.city {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.4);
 }
-.city:last-child{
-    border: none;
+.city:last-child {
+  border: none;
 }
-.date{
-    opacity: 0.7;
+.date {
+  opacity: 0.7;
 }
-.time{
-    font-size: 48px;
-    font-weight: bold;
+.time {
+  font-size: 48px;
+  font-weight: bold;
 }
-.time small{
-    font-size: 24px;
-    vertical-align: middle;
-    line-height:36px;
+.time small {
+  font-size: 24px;
+  vertical-align: middle;
+  line-height: 36px;
 }
-footer{
-    font-size: 18px;
-    color: rgba(0, 0, 0, 0.8);
-    text-align: center;
+a{
+  color:  #2a2472;
+}
+footer {
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.8);
+  text-align: center;
 }
